--- a/lang/ES.lang
+++ b/lang/ES.lang
@@ -166,6 +166,11 @@
 "calibrationUpdate": "Update",
 "calibrationList": "To List",
 "calibrationsUnexist": "No calibrations",
+"calibrationDateCreation": "Creation Date",
+"calibrationDateLastEdit": "Last Edit",
+"calibrationControls": "Controls",
+"calibrationEdit": "Edit",
+"calibrationDelete": "Delete",
 
 "chartPrintTable" : "Pantalla Excel",
 "chartPrintInNewWindow" : "Calendario Impresión",
