disablec save calibration button on update fix

--- a/lang/EN.lang
+++ b/lang/EN.lang
@@ -171,6 +171,7 @@
 "calibrationControls": "Controls",
 "calibrationEdit": "Edit",
 "calibrationDelete": "Delete",
+"calibrationInputName": "Please input name to save",
 
 "chartPrintTable" : "Digital Table Excel",
 "chartPrintInNewWindow" : "Print Chart",
