--- a/lang/ES.lang
+++ b/lang/ES.lang
@@ -171,6 +171,7 @@
 "calibrationControls": "Controls",
 "calibrationEdit": "Edit",
 "calibrationDelete": "Delete",
+"calibrationInputName": "Please input name to save",
 
 "chartPrintTable" : "Pantalla Excel",
 "chartPrintInNewWindow" : "Calendario Impresión",
