--- a/back/lang/RU.lang
+++ b/back/lang/RU.lang
@@ -3,6 +3,8 @@
 "flightUploading": "Загрузка полета",
 "exit": "Выход",
 "options": "Настройки",
+"on": "Вкл",
+"off": "Выкл",
 
 "continueLabel": "Далее",
 "tplHasBeenAdded": "Шаблон добавлен. Для приминения изменений обновите страницу (Shift+F5)",
