--- a/back/lang/ES.lang
+++ b/back/lang/ES.lang
@@ -5,6 +5,10 @@
 "options": "Opciones",
 "on": "On",
 "off": "Off",
+"userOptions": "User Options",
+"printTableStep": "Paso mesa de impresión",
+"mainChartColor": "Color principal fondo de la carta",
+"lineWidth": "Сhart líneas de ancho",
 
 "continueLabel": "Además",
 "tplHasBeenAdded": "Plantilla añadió. (Shift+F5)",
@@ -224,12 +228,6 @@
     "filePreview": "Preestreno",
     "chooseFile": "Seleccione un archivo",
     "helpTitle": "Una breve información",
-
-    "viewItem" : "Visión",
-    "options": "Opciones",
-    "printTableStep": "Paso mesa de impresión",
-    "mainChartColor": "Color principal fondo de la carta",
-    "lineWidth": "Сhart líneas de ancho",
 
     "sliceCreation": "Создание среза",
     "sliceName": "Nombre",
