--- a/back/lang/EN.lang
+++ b/back/lang/EN.lang
@@ -9,6 +9,18 @@
 "printTableStep": "Print table step",
 "mainChartColor": "Main chart background color",
 "lineWidth": "Сhart lines width",
+"aggregatedStatistics": "Aggregated statistics",
+"flightInfoFilter": "Filter by flight info",
+"fdrType": "FDR type",
+"bort":"A/C",
+"voyage":"Flight",
+"departureFromDate":"Departure from date",
+"departureToDate":"Departure to date",
+"departureAirport": "Departure Airport",
+"arrivalAirport": "Arrival Airport",
+"monitoredParameters": "Monitored parameters",
+"putFlightFilter": "Put flight filter",
+"noMonitoredParamsOnSpecifyedFilter": "No monitored params on specifyed filter",
 
 "continueLabel": "Next",
 "tplHasBeenAdded": "Template added. Demonstrate how changes to refresh the page (Shift + F5)",
