--- a/back/lang/ES.lang
+++ b/back/lang/ES.lang
@@ -9,6 +9,18 @@
 "printTableStep": "Paso mesa de impresión",
 "mainChartColor": "Color principal fondo de la carta",
 "lineWidth": "Сhart líneas de ancho",
+"aggregatedStatistics": "Aggregated statistics",
+"flightInfoFilter": "Filter by flight info",
+"fdrType": "Tipo de registro",
+"bort":"Número de aeronaves",
+"voyage":"Vuelo",
+"departureFromDate":"Departure from date",
+"departureToDate":"Departure to date",
+"departureAirport": "Aeropuerto de salida",
+"arrivalAirport": "Aterrizaje de aeropuertos",
+"monitoredParameters": "Monitored parameters",
+"putFlightFilter": "Put flight filter",
+"noMonitoredParamsOnSpecifyedFilter": "No monitored params on specifyed filter",
 
 "continueLabel": "Además",
 "tplHasBeenAdded": "Plantilla añadió. (Shift+F5)",
