--- a/back/lang/RU.lang
+++ b/back/lang/RU.lang
@@ -9,6 +9,18 @@
 "printTableStep": "Шаг цифропечати",
 "mainChartColor": "Заливка графика",
 "lineWidth": "Толщина линий на графике",
+"aggregatedStatistics": "Агрегированая статистика",
+"flightInfoFilter": "Фильтр по полетным данным",
+"fdrType": "Тип регистратора",
+"bort":"Номер борта",
+"voyage":"Рейс",
+"departureFromDate":"От даты отправления",
+"departureToDate":"До даты отправления",
+"departureAirport": "Аэропорт вылета",
+"arrivalAirport": "Аэропорт посадки",
+"monitoredParameters": "Отслеживаемые параметры",
+"putFlightFilter": "Задайте параметры фильтра",
+"noMonitoredParamsOnSpecifyedFilter": "Нет отслеживаемых параметров по указанному фильтру",
 
 "continueLabel": "Далее",
 "tplHasBeenAdded": "Шаблон добавлен. Для приминения изменений обновите страницу (Shift+F5)",
