--- a/back/lang/EN.lang
+++ b/back/lang/EN.lang
@@ -21,6 +21,15 @@
 "monitoredParameters": "Monitored parameters",
 "putFlightFilter": "Put flight filter",
 "noMonitoredParamsOnSpecifyedFilter": "No monitored params on specifyed filter",
+"settlementsReport": "Report",
+"setParamsForReportGenerating": "Set params for report generating",
+"noDataToGenerateReport": "No data to generate report",
+"settlementsReportRowTitle":"Param",
+"settlementsReportRowCount":"Count",
+"settlementsReportRowMin":"Min",
+"settlementsReportRowAvg":"Avg",
+"settlementsReportRowSum":"Sum",
+"settlementsReportRowMax":"Max",
 
 "continueLabel": "Next",
 "tplHasBeenAdded": "Template added. Demonstrate how changes to refresh the page (Shift + F5)",
