--- a/back/lang/RU.lang
+++ b/back/lang/RU.lang
@@ -21,6 +21,15 @@
 "monitoredParameters": "Отслеживаемые параметры",
 "putFlightFilter": "Задайте параметры фильтра",
 "noMonitoredParamsOnSpecifyedFilter": "Нет отслеживаемых параметров по указанному фильтру",
+"settlementsReport": "Результаты",
+"setParamsForReportGenerating": "Задайте параметры для формирования результатов",
+"noDataToGenerateReport": "Нет данных для формирования результатов",
+"settlementsReportRowTitle":"Параметр",
+"settlementsReportRowCount":"Количество",
+"settlementsReportRowMin":"Мин",
+"settlementsReportRowAvg":"Среднее",
+"settlementsReportRowSum":"Сумма",
+"settlementsReportRowMax":"Макс",
 
 "continueLabel": "Далее",
 "tplHasBeenAdded": "Шаблон добавлен. Для приминения изменений обновите страницу (Shift+F5)",
